--- a/Basic-auth/src/main/resources/application.properties
+++ b/Basic-auth/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=Basic-auth
 
 server.port=8080
+
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:certificate.p12
+server.ssl.key-store-password=1234
